# filedrop-v2

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  data.sqlite  rocket.toml  run-filedrop-v2.sh
.github/workflows/: docker-image.yml
assets/: about favicon.txt
migrations/2023-01-08-125206_file_table/: down.sql  up.sql
migrations/2023-01-08-125206_initial/: down.sql  up.sql
migrations/2023-01-21-160322_user_table/: down.sql  up.sql
src/: main.rs
src/dir_struct/: mod.rs
src/dir_zipper/: mod.rs
src/file_struct/: mod.rs
src/form/: login_form.rs
src/model/: dir_struct.rs  file_struct.rs  mod.rs  user.rs
src/repository/: mod.rs  schema.rs  user_repository.rs
src/routes/: about.rs  download_dir.rs  download_file.rs  index.rs  login.rs  logout.rs  mod.rs
src/utils/: db_connection_manager.rs  dir_zipper.rs  hash_utils.rs  mod.rs  user_session_manager.rs
templates/: about.tera  base.tera  index.tera  modal_login.tera
