[package]
name = "filedrop-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
#opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*


[dependencies]
rocket = { version = "0.5.0-rc.2", features= ["json", "msgpack"]}
tera = { version = "1", default-features = true}
rocket_dyn_templates = {version = "0.1.0-rc.2", features = ["tera"]}
rocket-include-static-resources = "0.10.2"
serde = { version = "1.0.145", features = ["derive"] }
fsio = "0.4.0"
dotenv = "0.15.0"
mime_guess = "2.0.4"
chrono = "0.4"

#FOLDER SUPPORT
zip = { version = "0.6.3"}
tempfile = "3.3.0"
walkdir = "2.3.2"

#DB
diesel = { version = "2.0.0", features = ["sqlite"] }

#SECURITY
rocket-jwt = "0.5.0"
jsonwebtoken = "8.2.0"
bcrypt = "0.13.0"